--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,2 @@
-  datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/coaching_chat_app?currentSchema=coaching_chat_app
-    username: coaching_chat
-    password: admin
+common:
+  property: commonValue
