--- a/coaching-chat-app/application.yml
+++ b/coaching-chat-app/application.yml
@@ -3,4 +3,4 @@ coach:
     welcomeText: Welcome! Connection established.
 member:
   chat:
-    welcomeText: Welcome! Connection established. Waiting for a support agent to connect!!!
+    welcomeText: Welcome! Connection established. Waiting for a support agent to connect!!!!!
